[project]
name = "AIMMS_save-images-as-video"
description = "A custom node for ComfyUI to save image sequences as video files using FFmpeg. Supports various codecs, audio muxing, and in-node previews."
version = "1.2.1"
license = {file = "LICENSE"}
dependencies = ["Pillow"]

[project.urls]
Repository = "https://github.com/mdkberry/ComfyUI-Save-Images-As-Video"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AIMMS"
DisplayName = "AIMMS - Save Images As Video (FFmpeg)"
Icon = ""
